<resources>
    <string name="app_name">TheNameQuizApp</string>
    <string name="back_to_database">Back to Database</string>
    <string name="write_a_name">Write a name…</string>
    <string name="add_photo">Add Photo</string>
    <string name="save_person">Save Person</string>
    <string name="pic_of_selected_person">Pic of selected person</string>
    <string name="this_is_the_database_activity">This is the database activity</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="add_person">Add person</string>
    <string name="textview">TextView</string>
    <string name="type_a_name">Type a name…</string>
    <string name="next">Next</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="explore_database">Explore Database</string>
    <string name="person_photo">Person photo</string>
    <string name="delete_btn">Delete btn</string>
</resources>