<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <Button
        android:id="@+id/backToDatabaseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="14dp"
        android:onClick="backToDatabase"
        android:text="@string/back_to_database"
        app:layout_constraintBottom_toTopOf="@+id/image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addPersonNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:autofillHints="@string/write_a_name"
        android:ems="10"
        android:hint="@string/write_a_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/addPhotoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view" />

    <Button
        android:id="@+id/addPhotoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="13dp"
        android:text="@string/add_photo"
        app:layout_constraintBottom_toTopOf="@+id/savePersonBtn"
        app:layout_constraintStart_toStartOf="@+id/savePersonBtn"
        app:layout_constraintTop_toBottomOf="@+id/addPersonNameEdit" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="11dp"
        android:contentDescription="@string/pic_of_selected_person"
        app:layout_constraintBottom_toTopOf="@+id/addPersonNameEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backToDatabaseBtn"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/savePersonBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/save_person"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPhotoBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>